# fpp-media-server

./: .gitignore  Cargo.toml  README.md  index.html
content/: index.html  test.html
src/: main.rs
